# langchain-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  README_INSTALL.md  README_xu.md  archived.md  docker-compose.yml  garbage_demo.py  mem.md  nginx.conf  pyproject.toml  test_rest_api.py  test_route.py
archived/: make_rag_database.py
configs/: local_tools_config.json  mcp_config.json  pipeline_registry.json  route_sys_prompts.json  ws_mcp_config.json
docker/: Dockerfile.docker-only  Dockerfile.frontend  Dockerfile.prod  README_DOCKER_ONLY.md  docker-compose.docker-only.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh
dummy/: calculator.py
fastapi_server/: Dockerfile.api  OpenAI_API_README.md  README.md  build_server.py  combined.py  docker-compose.api.yml  fake_stream_server_dashscopy.py  front_apis.py  openai_client_example.py  requirements.txt  server.py  server_dashscope.py  server_openai.py  server_rest.py  server_viewer.py  start_server.sh  test_dashscope_client.py  test_openai_client.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
lang_agent/: base.py  client_tool_manager.py  config.py  mcp_server.py  pipeline.py  tool_manager.py  utils.py
scripts/: create_config.sh  create_prompt_config.sql  create_prompt_table.sql  demo_chat.py  eval.py  gen_arch_img.py  init_user.sql  make_eval_dataset.py  make_rag_database.py  manage_db.py  recreate_table.sql  run_agent_server.py  run_all_mcps.py  start_mcp_server.py  (+2 more)
(+104 files in other folders)
